Initial drop of code
Issue-ID: CPS-243
